--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="shortcut icon" href="./clan-icon-2.png">
+  <link rel="shortcut icon" href="./leaf_head_band.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MS War Team Analyzer</title>
+  <title>AStackzzzz War Team Analyzer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
