changing title of app

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class="non-character-container">
-    <h2>Midnight Sage War Team Analyzer</h2>
+    <h2>AStackzzzz's War Team Analyzer</h2>
     <div class="analysis hide"></div>
     <div class="table-container">
       <table class="hide">
